# daemon-substrate

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  cabal.project  cabal.project.container  daemon-substrate.cabal  hostbootstrap-hostbinary.dhall  hostbootstrap-hostdaemon.dhall  hostbootstrap.dhall
DEVELOPMENT_PLAN/: 00-overview.md  README.md  development_plan_standards.md  legacy-tracking-for-deletion.md  phase-0-documentation-and-governance.md  phase-1-library-scaffolding-and-cabal-package.md  phase-2-capability-typeclasses-and-admin-surfaces.md  phase-2-typeclasses-pulsar-minio-engine.md  phase-3-bootconfig-liveconfig-lifecycle.md  phase-3-daemon-lifecycle-and-config.md  phase-4-engine-mock-protos-audit.md  phase-4-worker-and-orchestrator-base-loops.md  phase-5-base-loops.md  phase-5-kind-cluster-and-helm-chart.md  phase-6-bootstrap-and-outer-container.md  phase-6-cluster-bringup-tree.md  phase-7-hostbootstrap-and-project-dockerfile.md  phase-7-test-harness-integration.md  phase-8-test-harness-integration.md  phase-9-hostbootstrap-core-integration-and-host-driven-3x3.md  system-components.md
app/test/: Main.hs
chart/: Chart.yaml  values.yaml
chart/charts/: harbor-0.1.0.tgz  minio-0.1.0.tgz  pulsar-0.1.0.tgz
chart/charts/harbor/: Chart.yaml  values.yaml
chart/charts/harbor/templates/: pvc.yaml  service.yaml  statefulset.yaml
chart/charts/minio/: Chart.yaml  values.yaml
chart/charts/minio/templates/: pvc.yaml  service.yaml  statefulset.yaml
chart/charts/pulsar/: Chart.yaml  values.yaml
chart/charts/pulsar/templates/: pvc.yaml  service.yaml  statefulset.yaml
chart/files/: orchestrator.dhall  worker.dhall
chart/templates/: _helpers.tpl  configmap-orchestrator.yaml  configmap-worker.yaml  deployment-orchestrator.yaml  deployment-worker.yaml  networkpolicy-egress.yaml  service-orchestrator.yaml  service-worker.yaml
chart/values/: apple-silicon.yaml  linux-cpu.yaml
dhall/: lifecycle-policy.dhall  live.dhall  orchestrator.dhall  worker.dhall
docker/: Dockerfile  linux-substrate.Dockerfile
documents/: README.md  documentation_standards.md
documents/architecture/: daemon_roles.md  library_consumption_model.md  lifecycle_policy.md  pulsar_minio_ssot.md
documents/development/: assistant_workflow.md  local_dev.md  testing_strategy.md
documents/engineering/: batching.md  cabal_layout.md  cluster_topology.md  dhall_generation.md  hostbootstrap_integration.md  minio_buckets.md  mock_engine.md  orchestration_topologies.md  pulsar_native_client.md  pulsar_topics.md  test_isolation.md
documents/operations/: apple_silicon_runbook.md  cluster_bootstrap_runbook.md  linux_cpu_runbook.md
documents/reference/: cli_surface.md  proto_surface.md
proto/daemon_substrate/: audit.proto  control.proto  lifecycle.proto  orchestrator_worker.proto  workflow.proto
proto/daemon_substrate_test/: mock.proto
src/Daemon/: Audit.hs  Bootstrap.hs  Bridge.hs  Config.hs  Consumer.hs  Engine.hs  Harbor.hs  Kubectl.hs  Lifecycle.hs  MinIO.hs  Orchestrator.hs  Pulsar.hs  Reconciler.hs  Signal.hs  Sub.hs  Worker.hs  WorkflowState.hs
src/Daemon/Batching/: Batcher.hs  Hooks.hs  Scheduler.hs  Telemetry.hs
src/Daemon/Cluster/: EdgePort.hs  Harbor.hs  Helm.hs  Kind.hs  MinIO.hs  Plan.hs  Pulsar.hs  Runner.hs  Storage.hs  Types.hs  Workload.hs
src/Daemon/Config/: BootConfig.hs  LifecyclePolicy.hs  LiveConfig.hs
src/Daemon/Lifecycle/: Endpoints.hs
src/Daemon/MinIO/: Admin.hs  Cache.hs  Store.hs  Subprocess.hs
src/Daemon/Proto/: Audit.hs  Control.hs  Lifecycle.hs  Mock.hs  OrchestratorWorker.hs  PulsarApi.hs  Workflow.hs
src/Daemon/Pulsar/: Admin.hs  Native.hs
src/Daemon/Pulsar/Admin/: Http.hs
src/Daemon/Pulsar/Native/: Compression.hs  Connection.hs  Consumer.hs  Frame.hs  Lookup.hs  Producer.hs
src/Daemon/Test/: CLI.hs  EchoEngines.hs  FilesystemHarbor.hs  FilesystemKubectl.hs  FilesystemMinIO.hs  FilesystemPulsar.hs  Matrix.hs  MockEngine.hs
src/Daemon/Test/CLI/: Cluster.hs  Service.hs  Tests.hs  Types.hs
src/Daemon/Topology/: BatchedFanIn.hs  BatchedFanOut.hs  FanIn.hs  FanOut.hs  Pipeline.hs  RequestResponse.hs  Stream.hs  Types.hs
src/Daemon/Wire/: Audit.hs  Control.hs  Lifecycle.hs  OrchestratorWorker.hs  Workflow.hs
test/haskell-style/: Main.hs
test/integration/: Main.hs
test/unit/: Main.hs
